# discord-mauro-bot

./: .env.example  Cargo.toml  README.md
src/: consts.rs  main.rs
src/commands/: builder_test.rs  invito.rs  mod.rs  ping.rs  random.rs  suona.rs  vote.rs
src/commands/lupus/: action.rs  create.rs  join.rs  leave.rs  ls.rs  mod.rs  start.rs  start_game.rs  stats.rs  stop.rs
src/commands/lupus/action/: frame.rs  frame_and_kill.rs  givepicture.rs  heal.rs  kill.rs  mod.rs  pass.rs  possess.rs  protect.rs  roleblock.rs  shoot.rs  shot.rs  start_vote.rs  truesight.rs  wolfvote.rs
src/domain/: context_helper.rs  error.rs  mod.rs  msg_ext.rs
src/domain/lupus/: context.rs  context_ext.rs  game.rs  game_handler.rs  mod.rs  player.rs  roles.rs  roles_per_players.rs
