[package]
name = "disc-bot"
version = "0.1.0"
authors = ["Mauro Insacco <mauro.insacco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
serenity = { version = "0.10", features = ["collector"] }
tokio = { version = "1.0", features = ["macros", "signal", "rt-multi-thread"] }
sqlx = { version =  "0.5.5",  features = ["sqlite", "runtime-tokio-native-tls"]}
rand = "0.8.4"
